--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-09 14:26+0300\n"
-"PO-Revision-Date: 2022-08-09 14:26+0300\n"
+"POT-Creation-Date: 2022-08-09 17:59+0300\n"
+"PO-Revision-Date: 2022-08-09 18:02+0300\n"
 "Last-Translator: Timo Tuominen <timo.tuominen@kausal.tech>\n"
 "Language-Team: LANGUAGE <timo.tuominen@kausal.tech>\n"
 "Language: fi\n"
@@ -2203,6 +2203,14 @@ msgstr "Iso kuva"
 msgid "Small image"
 msgstr "Pieni kuva"
 
+#: pages/blocks.py pages/models.py
+msgid "Category"
+msgstr "Luokka"
+
+#: pages/blocks.py
+msgid "Links"
+msgstr "Linkit"
+
 #: pages/models.py
 msgid "show in footer"
 msgstr "näkyy sivun footerissa"
@@ -2248,6 +2256,10 @@ msgid "Related plans"
 msgstr "Liittyvät toimenpideohjelmat"
 
 #: pages/models.py
+msgid "Links to actions in specific category"
+msgstr "Linkitä valittujen luokkien toimenpiteisiin"
+
+#: pages/models.py
 msgid "Front page"
 msgstr "Etusivu"
 
@@ -2290,10 +2302,6 @@ msgstr "Sisältösivu"
 #: pages/models.py
 msgid "Content pages"
 msgstr "Sisältösivut"
-
-#: pages/models.py
-msgid "Category"
-msgstr "Luokka"
 
 #: pages/models.py
 msgid "Action list"
