--- a/locale/django.pot
+++ b/locale/django.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-09 17:59+0300\n"
+"POT-Creation-Date: 2022-08-10 15:39+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1006,8 +1006,7 @@ msgid "Days until actions considered stale"
 msgstr ""
 
 #: actions/models/plan.py
-#, python-format
-msgid "Actions not updated since this many days are considered stale. If you leave this blank the default of %(default_days)s will be used."
+msgid "Actions not updated since this many days are considered stale. If you leave this blank a default value will be used."
 msgstr ""
 
 #: actions/models/plan.py indicators/models.py
