--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-09 17:59+0300\n"
-"PO-Revision-Date: 2022-08-09 18:02+0300\n"
+"POT-Creation-Date: 2022-08-10 15:37+0300\n"
+"PO-Revision-Date: 2022-08-10 15:37+0300\n"
 "Last-Translator: Timo Tuominen <timo.tuominen@kausal.tech>\n"
 "Language-Team: LANGUAGE <timo.tuominen@kausal.tech>\n"
 "Language: fi\n"
@@ -1008,9 +1008,8 @@ msgid "Days until actions considered stale"
 msgstr "Kuinka monen päivän jälkeen toimenpiteen tila on vanhentunut "
 
 #: actions/models/plan.py
-#, python-format
-msgid "Actions not updated since this many days are considered stale. If you leave this blank the default of %(default_days)s will be used."
-msgstr "Toimenpiteitä, jotka ovat olleet päivittämättä näin monta päivää, pidetään vanhentuneina. Jos jätät tämän tyhjäksi, käytössä on oletusarvo %(default_days)s."
+msgid "Actions not updated since this many days are considered stale. If you leave this blank a default value will be used."
+msgstr "Toimenpiteitä, jotka ovat olleet päivittämättä näin monta päivää, pidetään vanhentuneina. Jos jätät tämän tyhjäksi, käytössä on oletusarvo."
 
 #: actions/models/plan.py indicators/models.py
 msgid "plans"
